<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AuthorizationScreen">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="328dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/horizontal_logo_description"
        app:layout_constraintBottom_toTopOf="@+id/authorization_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/banner"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/register_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/authorisation_screen_header_description"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/authorisation_screen_header_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/data_input_field_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/rubik_bold"
        android:labelFor="@id/data_input_field"
        android:text="@string/phone_input_field_header_text"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/authorization_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_header"
        app:layout_constraintVertical_bias="0.176" />

    <EditText
        android:id="@+id/data_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/phone_input_field_hint"
        android:ems="10"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_input_field_header"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/authorization_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/authorization_button_description"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/authorization_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_input_field"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>